--- a/ApplianceManager.php/css/osa.css
+++ b/ApplianceManager.php/css/osa.css
@@ -397,7 +397,7 @@ a:hover
 	border : 1px solid #aaaaaa;
 	font-family : Arial, Helvetica, sans-serif;
 	background-color : #ffffff;
-	font-size : 9;
+	#font-size : 10;
 	width: 300px;
 }.inputFile
 {
@@ -412,7 +412,6 @@ a:hover
 	border : 1px solid #aaaaaa;
 	font-family : Arial, Helvetica, sans-serif;
 	background-color : #ffffff;
-	font-size : 9;
 	width: 150px;
 }
 .inputDT
